--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    
+    <link href="public/favicon.png" rel="icon" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style> body{margin:0} </style>
     <script src="//cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js"></script>
-    <title>Phaser 3 - Estructuras de carpetas</title>
+    <title>Temporada de Patos</title>
 </head>
 <body>
     <!-- Carga del archivo configuración de Phaser -->
