cambio de botones

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <style> body{margin:0} </style>
     <script src="//cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js"></script>
     <title>Temporada de Patos</title>
+    <style media='screen' type='text/css'>
+        @font-face {
+          font-family: 'LSans';
+          src: url('/public/assets/fonts/Lucida-Sans-Font/LSANS.TTF');
+          font-weight:400;
+          font-weight:normal;
+        }
+  </style>
 </head>
 <body>
     <!-- Carga del archivo configuración de Phaser -->
