--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     
     <link href="public/favicon.png" rel="icon" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style> body{margin:0} </style>
-    <script src="//cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js"></script>
     <title>Temporada de Patos</title>
+    <style> body{margin:0} </style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <script src="//cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js"></script>
     <style media='screen' type='text/css'>
         @font-face {
           font-family: 'LSans';
@@ -21,5 +22,8 @@
 <body>
     <!-- Carga del archivo configuración de Phaser -->
     <script type="module" src="./src/js/index.js"></script>
+
+
+
 </body>
 </html> 
